client/src/components/styles/greet-card.css
.greet-card {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 40vw;
  height: 20vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.text-container {
  text-align: center;
  line-height: 2.5rem;
}

.text-container > * {
  font-size: 2rem;
}

.get-started {
  perspective: 750px;
  transition: transform 0.5s ease, background-color 0.5s ease-in-out;
  margin-top: 2em;
  font-size: 1.8rem;
  animation : small-bounce 1s ease-in-out infinite alternate;
  text-align: center;
  width: 100%;
}

.get-started:hover {
  transform: rotateY(20deg) scale(1.1);
}

.arrow {
  transition: all 0.3s ease;
  font-weight: 800;
}

.active {
  color: var(--main);
  background-color: var(--text);
}

#photo,
#code {
  padding: 5px;
  border-radius: 5px;
}

#tip-greet{
  font-size: 0.9rem;
  font-weight: 300;
}

@keyframes small-bounce {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(1.02);
  }
}

